--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00695C</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackBar">#FF4086FF</color>
+    <color name="colorBlack">#FF0E0E0E</color>
 
 
 
